[project]
name = "nashorpass"
version = "0.1.0"
description = ""
authors = [
    {name = "jbaremoney",email = "114310093+jbaremoney@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pettingzoo (>=1.25.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
